--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@
   pointer-events: none;
 }
 
+.test-modal--focusable {
+  width: 60%;
+}
+
 .test-modal__backdrop {
   opacity: 1;
   transition: opacity 0.2s ease;
@@ -22,6 +26,11 @@
 .test-modal__backdrop--hide {
   opacity: 0 !important;
   pointer-events: none;
+}
+
+.test-modal__dialog--focusable {
+  margin: 0;
+  width: 100%;
 }
 
 .test-modal__body {
@@ -45,7 +54,11 @@
   margin-bottom: 20px;
 }
 
-.first-case-modal-1 {
+.first-case-modal {
+  padding-right: 0 !important;
+}
+
+.first-case-modal__dialog {
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -98,15 +111,11 @@
 .third-case-left-modal {
   margin: 0px;
   height: 100%;
-  width: 60%;
-  position: absolute;
-  left: 0px;
+  right: auto;
 }
 
 .third-case-right-modal {
   margin: 0px;
   height: 100%;
-  width: 60%;
-  position: absolute;
-  right: 0px;
+  left: auto;
 }
