--- a/src/styles.css
+++ b/src/styles.css
@@ -29,8 +29,8 @@
 }
 
 .test-modal__dialog--focusable {
-  margin: 0;
-  width: 100%;
+  margin: 0 !important;
+  width: 100% !important;
 }
 
 .test-modal__body {
@@ -58,10 +58,10 @@
   padding-right: 0 !important;
 }
 
-.first-case-modal__dialog {
-  width: 100%;
-  height: 100%;
-  margin: 0px;
+.first-case-modal-dialog {
+  width: 100% !important;
+  height: 100% !important;
+  margin: 0px !important;
 }
 
 .first-case-modal-body-2 {
@@ -71,13 +71,13 @@
 }
 
 .first-case-modal-body-1-left-modal {
-  position: absolute;
-  left: 10px;
+  position: absolute !important;
+  left: 10px !important;
 }
 
 .first-case-modal-body-1-right-modal {
-  position: absolute;
-  right: 10px;
+  position: absolute !important;
+  right: 10px !important;
 }
 
 .second-case {
@@ -93,29 +93,31 @@
 }
 
 .second-case-left-modal {
-  margin: 0px;
-  height: 60%;
-  width: 30%;
-  position: absolute;
-  left: 10px;
+  margin: 0px !important;
+  height: 60% !important;
+  width: 30% !important;
+  position: absolute !important;
+  left: 10px !important;
 }
 
 .second-case-right-modal {
-  margin: 0px;
-  height: 60%;
-  width: 30%;
-  position: absolute;
-  right: 10px;
+  margin: 0px !important;
+  height: 60% !important;
+  width: 30% !important;
+  position: absolute !important;
+  right: 10px !important;
 }
 
 .third-case-left-modal {
-  margin: 0px;
-  height: 100%;
-  right: auto;
+  margin: 0px !important;
+  height: 100% !important;
+  width: 60% !important;
+  right: auto !important;
 }
 
 .third-case-right-modal {
-  margin: 0px;
-  height: 100%;
-  left: auto;
+  margin: 0px !important;
+  height: 100% !important;
+  width: 60% !important;
+  left: auto !important;
 }
